--- a/scss/modules/_cart-checkout.scss
+++ b/scss/modules/_cart-checkout.scss
@@ -36,7 +36,6 @@
 
 .cart-checkout__total {
 	padding-top: 10px;
-	padding-right: 30px;
 	text-align: right;
 	font-weight: 700;
 	font-size: 24px;
