--- a/scss/modules/_user-info.scss
+++ b/scss/modules/_user-info.scss
@@ -60,6 +60,8 @@
 	input[type="email"],
 	input[type="password"] {
 		display: block;
+		box-sizing: border-box;
+		width: 100%;
 		min-width: 250px;
 		margin-top: 10px;
 		padding: 10px;
